# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ludus-renderer"
version = "0.9.0"
description = "Ludus Renderer - GPU-native F-theta CUDA software rasterizer"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "NVIDIA"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.0",
    "pandas",
    "pyarrow",
    "scipy",
    "pillow",
    "PyNvVideoCodec",
    "setuptools",
    "ninja>=1.13.0",
    "nvidia-nvcomp-cu12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "imageio-ffmpeg",
    "opencv-python",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "ludus_renderer",
    "ludus_renderer._ops",
    "ludus_renderer.torch",
]

[tool.setuptools.package-data]
"ludus_renderer" = [
    "_cpp/common/*.h",
    "_cpp/common/*.cpp",
    "_cpp/render/*.h",
    "_cpp/render/*.cu",
    "_cpp/cudaraster/*.hpp",
    "_cpp/cudaraster/*.cpp",
    "_cpp/cudaraster/*.cu",
    "_cpp/cudaraster/cuda/*.hpp",
    "_cpp/cudaraster/cuda/*.cuh",
    "_cpp/cudaraster/cuda/*.inl",
    "_cpp/cudaraster/cudaraster_fw_stub.cpp",
    "_cpp/cudaraster/framework/**/*.hpp",
    "_cpp/cudaraster/framework/**/*.cpp",
    "_cpp/cudaraster/framework/**/*.h",
    "_cpp/bindings/*.h",
    "_cpp/bindings/*.inl",
    "_cpp/bindings/*.cpp",
    "_cpp/nvjpeg/*.h",
    "_cpp/nvjpeg/*.cpp",
    "_cpp/nvjpeg/*.cu",
    "_cpp/loader/*.h",
    "_cpp/loader/*.cpp",
    "_cpp/loader/*.cu",
]

[tool.uv]
managed = true
