# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnidreams-interactive-drive"
version = "0.1.0a2"
description = "Single-process driving demo for the omnidreams world model, with a slangpy/Ludus front end."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "pyarrow>=16.0",
  # Everything below was previously split across [ui] and [world-model]
  # extras; the demo always needs both, so a single ``uv sync --package
  # omnidreams-interactive-drive`` should install the whole runtime.
  "slangpy==0.41.0",
  "torch>=2.11",
  "torchvision>=0.26",
  "ludus-renderer",
  "flashdreams",
  "flashdreams-omnidreams",
  "einops>=0.8",
  "safetensors>=0.5",
  "tqdm>=4.67",
  "transformers>=5.0,<6",
  "huggingface_hub>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "ruff",
  "pyright",
  "pre-commit>=3.7",
  "pyvirtualdisplay>=3.0",
  "flip-evaluator>=1.7",
]

# NOTE on dependency resolution: ``flashdreams``, ``flashdreams-omnidreams``,
# and ``ludus-renderer`` are workspace members of the parent flashdreams
# workspace, and this package is itself a member (registered in
# ``flashdreams/pyproject.toml`` under ``[tool.uv.workspace] members``).
# A ``[tool.uv.sources]`` block with ``workspace = true`` entries would be the
# usual way to make that explicit, but uv stops walking up at the first
# enclosing ``pyproject.toml`` when resolving a member's own sources, and the
# enclosing ``integrations/omnidreams/pyproject.toml`` is not a workspace root
# (uv issue astral-sh/uv#16640). The bare names below resolve against the
# workspace from the lock-time context at the workspace root, which works.

[project.scripts]
# Demo entry point. The HUD is on by default; pass ``--no-hud`` to
# get the legacy bare-backend behaviour (matching the older standalone
# ``interactive-drive`` script). ``--stream-mjpeg HOST:PORT`` implies
# ``--no-hud`` because the user is then viewing through a browser.
# The demo also auto-stages the default scene on first launch (HF_TOKEN
# required); ``interactive-drive-prepare`` is the explicit setup command
# for staging arbitrary scenes and pre-warming the Cosmos text encoder.
interactive-drive = "interactive_drive.demo:main"
interactive-drive-prepare = "interactive_drive.prepare:main"

[tool.hatch.build.targets.wheel]
packages = ["src/interactive_drive"]

[tool.hatch.build.targets.sdist]
include = [
  "src/interactive_drive",
  "configs",
  "tests",
  "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
addopts = "-m 'not xvfb' --capture=sys"
markers = [
  "gpu: test requires an NVIDIA GPU / CUDA driver (select with '-m gpu', skip with '-m \"not gpu\"')",
  "xvfb: test uses pyvirtualdisplay/Xvfb (deselected by default; run with '-m xvfb' or clear with '-m \"\"')",
  # Workspace-wide CI tier markers. The sample's ``tests/conftest.py``
  # ``pytest_collection_modifyitems`` hook auto-assigns one of these to
  # every test based on the sample-local ``gpu`` / ``xvfb`` markers,
  # so root ``pytest -m ci_cpu`` / ``pytest -m ci_gpu`` picks the
  # right subset and the workspace's ``marker_enforcement`` plugin
  # doesn't reject sample tests. Registering them here so
  # ``strict_markers`` doesn't complain when the conftest adds them.
  "ci_cpu: CPU-safe test, runs on the CPU CI runner",
  "ci_gpu: requires GPU or libGL (cv2), runs on the GPU CI runner",
  "manual: heavy or environment-specific test, opt-in only",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# CPY001 (missing-copyright-notice) is a ruff preview rule. `preview = true` plus
# `explicit-preview-rules = true` opts in to that one rule without enabling other
# in-preview behaviour for the stable rules.
preview = true
explicit-preview-rules = true
select = ["E", "F", "W", "I", "B", "UP", "SIM", "CPY001"]
ignore = [
  # TODO: 18 long lines remain across argparse descriptions, error f-strings, and a
  # few long signatures. Each wants a small local restructure; re-enable once cleaned up.
  "E501",
]

# Enforce the NVIDIA SPDX copyright header on every .py file. The year must end in
# 2026; an optional earlier year may precede it (e.g. "2024-2026"). Bump the regex
# year annually when the calendar year ticks over.
[tool.ruff.lint.flake8-copyright]
notice-rgx = 'SPDX-FileCopyrightText: Copyright \(c\) (\d{4}-)?2026 NVIDIA CORPORATION & AFFILIATES\.'

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
# TODO: files listed below currently fail pyright in `standard` mode because of
# structural patterns we haven't untangled yet:
#   - slangpy objects held as `: object` (math_utils.py) - need real slangpy type
#     imports without breaking the optional ui-extra install.
#   - flashdreams imports currently lack type information in this repo.
# Remove entries as each file is cleaned up.
exclude = [
  "src/interactive_drive/math_utils.py",
  "src/interactive_drive/scene_loader.py",
  "src/interactive_drive/backends/world_model.py",
  "src/interactive_drive/world_model/flashdreams_adapter.py",
  "src/interactive_drive/world_model/manifest.py",
  "tests/test_world_model_adapter.py",
]

# Workspace-level uv configuration (override-dependencies, no-build-isolation-package,
# extra-build-dependencies) is declared in the root flashdreams pyproject.toml and
# applies to all workspace members, so no per-member [tool.uv] block is required.
